--- a/trunk/LIME/res/values-zh-rTW/strings.xml
+++ b/trunk/LIME/res/values-zh-rTW/strings.xml
@@ -36,7 +36,7 @@
     
     <!-- LIME Setting -->
     <string name="lime_setting_title">LIME 對應表管理</string>
-    <string name="lime_setting_operation_notice">LIME IME v1.7.3\n\n請點選下方的按鈕由 SDCARD 選擇並載入輸入法對應表 (.lime), 執行這一個動作會清除先前已載入的記錄. \n匯入工作將於背景執行，進度會顯示於狀態列，依檔案大小可能會耗費數分鐘至數十分之久，請耐心等候. \n您可以在官方網站  http://android.toload.net/ 找到關於輸入法對應表建立方式及詳細操作使用說明.</string>
+    <string name="lime_setting_operation_notice">LIME IME v1.7.4\n\n請點選下方的按鈕由 SDCARD 選擇並載入輸入法對應表 (.lime), 執行這一個動作會清除先前已載入的記錄. \n匯入工作將於背景執行，進度會顯示於狀態列，依檔案大小可能會耗費數分鐘至數十分之久，請耐心等候. \n您可以在官方網站  http://android.toload.net/ 找到關於輸入法對應表建立方式及詳細操作使用說明.</string>
     <string name="lime_setting_btn_load_local">載入 .LIME 對應表</string>
     <string name="lime_setting_operation_info">系統資訊</string>
     <string name="lime_setting_mapping_version">對應表 :</string>
@@ -93,6 +93,8 @@
     <string name="display_number_keypads_summary">顯示數字按鈕於預設鍵盤上 </string>
     <string name="candidate_switch">滑動選取</string>
     <string name="candidate_switch_summary">滑動選取輸入法建議文字</string>
+    <string name="candidate_display">顯示相近文字</string>
+    <string name="candidate_display_summary">顯示最接近輸入字根的文字</string>
     <string name="candidate_learning">文字選取喜好</string>
     <string name="candidate_learning_summary">記憶文字輸入或選取喜好排序建議文字</string>
     <string name="candidate_dictionary">啟動關聯字功能</string>
