--- a/trunk/LIME/res/values-zh-rCN/strings.xml
+++ b/trunk/LIME/res/values-zh-rCN/strings.xml
@@ -18,16 +18,16 @@
     
     <!-- LIME Setting -->
     <string name="lime_setting_title">LIME 1.8.3v \n\n**由旧版本升级(1.7.x)请重新汇入字根档!!\n\n自定义输入法建立工具。透过 LIME 输入法字根对应档的汇入，您可以打造完全属于您个人的输入方式。关于对应档的建立方式您可以在官方网站找到更多相关的资讯.\nhttp://android.toload.net/</string>
-    <string name="lime_setting_operation_notice1">\n[载入对应表]\n您必需先汇入完整字根对应表才能开始输入文字，请选择适当的 .LIME 进行资料载入动作。\n</string>
+    <string name="lime_setting_operation_notice1">\n[载入对应表]\n您必需先汇入完整字根对应表才能开始输入文字，请选择适当的 .LIME 或 .CIN 进行资料载入动作。\n</string>
     <string name="lime_setting_operation_info1">版本 : </string>
-    <string name="lime_setting_operation_info2">总笔数 : </string>
+    <string name="lime_setting_operation_info2">总笔数 : </string> 
     <string name="lime_setting_operation_notice2">\n[清除资料库]\n假如您想要重置资料库请点选下方的按钮。资料库重置后可以让您重头开始汇入 LIME 字根档。</string>
     <string name="lime_setting_operation_notice3">\n[关联字备份/还原]\nLIME 程式会依使用者曾输入过的文字自动建立关联字资料库。您可以使用下列的功能进行关联字资料库的备份及还原工作。\n</string>
     <string name="lime_setting_operation_info3">总笔数 : </string>
     <string name="lime_setting_operation_notice4">\n[清除关联字]\n执行这一个功能可以让系统重新建立关联字资料库.</string>
     
     <!-- Button Text -->
-    <string name="lime_setting_btn_load_local">载入 .LIME</string>
+    <string name="lime_setting_btn_load_local">载入字根档</string>
     <string name="lime_setting_reset_database">清除资料库</string>
     <string name="lime_setting_reset_dictionary">清除关联字</string>
     <string name="lime_setting_backtup_db">资料备份</string>
@@ -41,7 +41,7 @@
     <string name="lime_setting_btn_close">关闭</string>
     
     <!-- LIME Loading -->
-    <string name="lime_setting_btn_load_local_notice">请选择 .LIME 档案</string>
+    <string name="lime_setting_btn_load_local_notice">请选择 .LIME 或 .CIN 档案</string>
     <string name="lime_setting_loading">载入对应档</string>
     <string name="lime_setting_select_root"> - back to /</string>
     <string name="lime_setting_select_parent"> - back to ..</string>
@@ -58,8 +58,8 @@
     <string name="lime_setting_notification_userdic_reset">关联字清除完成</string>
     <string name="lime_setting_notification_userdic_backup">关联字备份完成</string>
     <string name="lime_setting_notification_userdic_restore">关联字还原完成</string>
-    <string name="lime_setting_notification_db_loading">开始载入 .lime 内容</string>
-    <string name="lime_setting_notification_db_request">无对应字码, 请先载入 .LIME 档案</string>
+    <string name="lime_setting_notification_db_loading">开始载入字根檔内容</string>
+    <string name="lime_setting_notification_db_request">无对应字码, 请先载入 .LIME 或 .CIN 档案</string>
       
     <!-- TAB -->
     <string name="lime_setting_db">对应表管理</string>
