--- a/branches/jeremy/res/values-zh-rCN/strings.xml
+++ b/branches/jeremy/res/values-zh-rCN/strings.xml
@@ -5,8 +5,9 @@
     <!-- Title for Latin keyboard  -->
     <string name="app_name">LIME</string>
     <string name="ime_name">LIME</string>
-    <string name="ime_setting">LIME</string>
-
+    <string name="ime_setting">LIME设定</string>
+	<string name="input_method">输入方式</string>
+	
     <!-- Symbols that are commonly considered word separators in this language -->
     <string name="word_separators">\u0020.,;:!?\n()[]*&amp;@{}/&lt;&gt;_+=|&quot;</string>
     <string name="word_symbol_separators">\u0020?\n{}&lt;&gt;_+|&quot;</string>
@@ -19,7 +20,10 @@
     <!-- LIME Setting -->
     <string name="lime_setting_title">LIME 1.8.3v \n\n**由旧版本升级(1.7.x)请重新汇入字根档!!\n\n自定义输入法建立工具。透过 LIME 输入法字根对应档的汇入，您可以打造完全属于您个人的输入方式。关于对应档的建立方式您可以在官方网站找到更多相关的资讯.\nhttp://android.toload.net/</string>
     <string name="lime_setting_operation_notice1">\n[载入对应表]\n您必需先汇入完整字根对应表才能开始输入文字，请选择适当的 .LIME 或 .CIN 进行资料载入动作。\n</string>
-    <string name="lime_setting_operation_info1">版本 : </string>
+    <string name="lime_setting_operation_info1">预设对应表版本 : </string>
+    <string name="lime_setting_operation_info1_cj">仓颉对应表版本 : </string>
+    <string name="lime_setting_operation_info1_dayi">大易对应表版本 : </string>
+    <string name="lime_setting_operation_info1_bpmf">注音对应表版本 : </string>
     <string name="lime_setting_operation_info2">总笔数 : </string> 
     <string name="lime_setting_operation_notice2">\n[清除资料库]\n假如您想要重置资料库请点选下方的按钮。资料库重置后可以让您重头开始汇入 LIME 字根档。</string>
     <string name="lime_setting_operation_notice3">\n[关联字备份/还原]\nLIME 程式会依使用者曾输入过的文字自动建立关联字资料库。您可以使用下列的功能进行关联字资料库的备份及还原工作。\n</string>
@@ -60,6 +64,7 @@
     <string name="lime_setting_notification_userdic_restore">关联字还原完成</string>
     <string name="lime_setting_notification_db_loading">开始载入字根檔内容</string>
     <string name="lime_setting_notification_db_request">无对应字码, 请先载入 .LIME 或 .CIN 档案</string>
+    <string name="lime_setting_notification_db_busy">资料库工作中, 请稍后再试</string>
       
     <!-- TAB -->
     <string name="lime_setting_db">对应表管理</string>
@@ -71,6 +76,7 @@
     <string name="mapping">对应表</string>
     
     <string name="keyboard_list">键盘选取</string>
+    <string name="table_list">对应表选取</string>
     <string name="similiar_list">建议字显示数量</string>
     <string name="vibrate_on_keypress">打字震动</string>
     <string name="sound_on_keypress">打字音效</string>
@@ -117,6 +123,14 @@
 		<item>30</item>
 		<item>40</item>
 		<item>50</item>
+	</string-array>
+	
+	<!-- Table Selection list -->
+	<string-array name="table">
+		<item>预设/电话</item>
+		<item>仓颉</item>
+		<item>大易</item>
+		<item>注音</item>
 	</string-array>
 
 </resources>
