--- a/branches/jeremy/res/values-zh-rTW/strings.xml
+++ b/branches/jeremy/res/values-zh-rTW/strings.xml
@@ -5,7 +5,8 @@
     <!-- Title for Latin keyboard  -->
     <string name="app_name">LIME</string>
     <string name="ime_name">LIME</string>
-    <string name="ime_setting">LIME</string>
+    <string name="ime_setting">LIME設定</string>
+    <string name="input_method">輸入方式</string>
 
     <!-- Symbols that are commonly considered word separators in this language -->
     <string name="word_separators">\u0020.,;:!?\n()[]*&amp;@{}/&lt;&gt;_+=|&quot;</string>
@@ -19,7 +20,10 @@
     <!-- LIME Setting -->
     <string name="lime_setting_title">LIME 1.8.3v \n\n**由舊版本升級(1.7.x)請重新匯入字根檔!!\n\n自定義輸入法建立工具。透過 LIME 輸入法字根對應檔的匯入，您可以打造完全屬於您個人的輸入方式。關於對應檔的建立方式您可以在官方網站找到更多相關的資訊.\nhttp://android.toload.net/</string>
     <string name="lime_setting_operation_notice1">\n[載入對應表]\n您必需先匯入完整字根對應表才能開始輸入文字，請選擇適當的 .LIME 或 .CIN 進行資料載入動作。\n</string>
-    <string name="lime_setting_operation_info1">版本 : </string>
+    <string name="lime_setting_operation_info1">預設對應表版本 : </string>
+    <string name="lime_setting_operation_info1_cj">倉頡對應表版本 : </string>
+    <string name="lime_setting_operation_info1_dayi">大易對應表版本 : </string>
+    <string name="lime_setting_operation_info1_bpmf">注音對應表版本 : </string>
     <string name="lime_setting_operation_info2">總筆數 : </string> 
     <string name="lime_setting_operation_notice2">\n[清除資料庫]\n假如您想要重置資料庫請點選下方的按鈕。資料庫重置後可以讓您重頭開始匯入 LIME 字根檔。</string>
     <string name="lime_setting_operation_notice3">\n[關聯字備份/還原]\nLIME 程式會依使用者曾輸入過的文字自動建立關聯字資料庫。您可以使用下列的功能進行關聯字資料庫的備份及還原工作。\n</string>
@@ -60,6 +64,7 @@
     <string name="lime_setting_notification_userdic_restore">關聯字還原完成</string>
     <string name="lime_setting_notification_db_loading">開始載入字根檔內容</string>
     <string name="lime_setting_notification_db_request">無對應字碼, 請先載入 .LIME 或 .CIN 檔案</string>
+    <string name="lime_setting_notification_db_busy">資料庫工作中, 請稍後再試</string>
       
     <!-- TAB -->
     <string name="lime_setting_db">對應表管理</string>
@@ -71,6 +76,7 @@
     <string name="mapping">對應表</string>
     
     <string name="keyboard_list">鍵盤選取</string>
+    <string name="table_list">對應表選取</string>
     <string name="similiar_list">建議字顯示數量</string>
     <string name="vibrate_on_keypress">打字震動</string>
     <string name="sound_on_keypress">打字音效</string>
@@ -118,5 +124,15 @@
 		<item>40</item>
 		<item>50</item>
 	</string-array>
+	
+	<!-- Table Selection list -->
+	<string-array name="table">
+		<item>預設/電話</item>
+		<item>倉頡</item>
+		<item>大易</item>
+		<item>注音</item>
+	</string-array>
+	
+	
 
 </resources>
