--- a/branches/jeremy/res/values/strings.xml
+++ b/branches/jeremy/res/values/strings.xml
@@ -20,7 +20,10 @@
     <!-- LIME Setting -->
     <string name="lime_setting_title">LIME 1.8.3v \n\n**Upgrade from 1.7.x or previous version please import LIME mapping file again.\n\nThis is a tools which can help you build custom input method by import a set of mapping table. you can get more info from the official website.\nhttp://android.toload.net/</string>
     <string name="lime_setting_operation_notice1">\n[Import Mapping Table]\nBefore you start use LIME IME, you would need to load valid .lime mapping or .cin to the database.\n</string>
-    <string name="lime_setting_operation_info1">Version : </string>
+    <string name="lime_setting_operation_info1">Default Table Version : </string>
+    <string name="lime_setting_operation_info1_cj">Changjei Table Version : </string>
+    <string name="lime_setting_operation_info1_dayi">Dayi Table Version : </string>
+    <string name="lime_setting_operation_info1_bpmf">Phonetic Table Version : </string>
     <string name="lime_setting_operation_info2">Total Record : </string>
     <string name="lime_setting_operation_notice2">\n[Reset Mapping Table]\nIf you would like to reset the database please click button below, this action allow you to clean import status and reload mapping file.</string>
     <string name="lime_setting_operation_notice3">\n[Related Words Management]\nLime program will build related words base on what you input to the system from other applications.\nYou can use the functions below to backup/restore related words.\n</string>
@@ -60,6 +63,7 @@
     <string name="lime_setting_notification_userdic_backup">Related words backup completed</string>
     <string name="lime_setting_notification_userdic_restore">User dictionary restored</string>
     <string name="lime_setting_notification_db_loading">Start loading mapping file</string>
+    <string name="lime_setting_notification_db_busy">Database busy... Try again later!</string>
     <string name="lime_setting_notification_db_request">No Mapping Found!! Please Import .LIME or .CIN</string>
       
     <!-- TAB -->
@@ -72,6 +76,7 @@
     <string name="mapping">Mapping</string>
     
     <string name="keyboard_list">Keyboard Selection</string>
+    <string name="table_list">Table Selection</string>
     <string name="similiar_list">Suggestion display amount</string>
     <string name="vibrate_on_keypress">Vibrate on keypress</string>
     <string name="sound_on_keypress">Sound on keypress</string>
@@ -123,5 +128,13 @@
 		<item>40</item>
 		<item>50</item>
 	</string-array>
-
+	
+	<!-- Table Selection list -->
+	<string-array name="table">
+		<item>Default/Phone</item>
+		<item>Changjei</item>
+		<item>Dayi</item>
+		<item>Phonetic</item>
+	</string-array>
+	
 </resources>
