--- a/branches/jeremy/res/values-zh-rCN/strings.xml
+++ b/branches/jeremy/res/values-zh-rCN/strings.xml
@@ -38,10 +38,10 @@
     <string name="lime_setting_restore_db">资料还原</string>
     
     <!-- Select File -->
-    <string name="lime_setting_backup_message">备份至 /sdcard/limedb.txt</string>
-    <string name="lime_setting_backup_message_failed">无法备份至 /sdcard/limedb.txt, 请确认 /sdcard 目录是否可存取!!</string>
-    <string name="lime_setting_restore_message">由 /sdcard/limedb.txt 还原</string>
-    <string name="lime_setting_restore_message_failed">找不到 /sdcard/limedb.txt 档案, 无法进行资料还原任务!!</string>
+    <string name="lime_setting_backup_message">备份至 /sdcard/lime/limedb.txt</string>
+    <string name="lime_setting_backup_message_failed">无法备份至 /sdcard/lime/limedb.txt, 请确认 /sdcard 目录是否可存取!!</string>
+    <string name="lime_setting_restore_message">由 /sdcard/lime/limedb.txt 还原</string>
+    <string name="lime_setting_restore_message_failed">找不到 /sdcard/lime/limedb.txt 档案, 无法进行资料还原任务!!</string>
     <string name="lime_setting_btn_close">关闭</string>
     
     <!-- LIME Loading -->
@@ -76,6 +76,14 @@
     <string name="mapping">对应表</string>
     
     <string name="keyboard_list">键盘选取</string>
+    
+    <string name="im">输入法</string>
+    <string name="im_reverse_lookup_list">反查选择</string>
+    <string name="default_reverse_lookup_list">预设对应表反查</string>
+    <string name="cj_reverse_lookup_list">仓颉反查</string>
+    <string name="dayi_reverse_lookup_list">大易反查</string>
+    <string name="bpmf_reverse_lookup_list">注音反查</string>
+    
     <string name="table_list">对应表选取</string>
     <string name="similiar_list">建议字显示数量</string>
     <string name="vibrate_on_keypress">打字震动</string>
@@ -101,6 +109,15 @@
     
     <!-- Other Messages -->
     
+    <!-- IM Reverse Lookup List -->  
+    <string-array name="im_reverse_lookup">
+		<item>无</item>
+		<item>预设</item>
+		<item>仓颉</item>
+		<item>大易</item>
+		<item>注音</item>
+	</string-array>
+
     
     <!-- Keyboard Selection List -->
     <string-array name="keyboard">
