--- a/branches/jeremy/res/values/strings.xml
+++ b/branches/jeremy/res/values/strings.xml
@@ -24,9 +24,10 @@
     <string name="lime_setting_operation_info1_cj">Changjei Table Version : </string>
     <string name="lime_setting_operation_info1_dayi">Dayi Table Version : </string>
     <string name="lime_setting_operation_info1_bpmf">Phonetic Table Version : </string>
+    <string name="lime_setting_operation_info1_related">Preload related works database Version : </string>
     <string name="lime_setting_operation_info2">Total Record : </string>
     <string name="lime_setting_operation_notice2">\n[Reset Mapping Table]\nIf you would like to reset the database please click button below, this action allow you to clean import status and reload mapping file.</string>
-    <string name="lime_setting_operation_notice3">\n[Related Words Management]\nLime program will build related words base on what you input to the system from other applications.\nYou can use the functions below to backup/restore related words.\n</string>
+    <string name="lime_setting_operation_notice3">\n[Learned related Words Management]\nLime program will build related words base on what you input to the system from other applications.\nYou can use the functions below to backup/restore related words.\n</string>
     <string name="lime_setting_operation_info3">Total Record : </string>
     <string name="lime_setting_operation_notice4">\n[Reset Related Words]\Reset related words from the database and build new dataset.</string>
     
@@ -157,6 +158,7 @@
 		<item>Changjei</item>
 		<item>Dayi</item>
 		<item>Phonetic</item>
+		<item>Preload related words</item>
 	</string-array>
 	
 </resources>
