--- a/LIME/res/values-zh-rCN/strings.xml
+++ b/LIME/res/values-zh-rCN/strings.xml
@@ -18,14 +18,14 @@
     <string name="label_send_key">Send</string>
     
     <!-- LIME Setting -->
-    <string name="lime_setting_title">LIME 2.0v \n\n**由旧版本升级(1.7.x)请重新汇入字根档!!\n\n自定义输入法建立工具。透过 LIME 输入法字根对应档的汇入，您可以打造完全属于您个人的输入方式。关于对应档的建立方式您可以在官方网站找到更多相关的资讯.\nhttp://android.toload.net/</string>
-    <string name="lime_setting_operation_notice1">\n[载入对应表]\n您必需先汇入完整字根对应表才能开始输入文字，请选择适当的 .LIME 或 .CIN 进行资料载入动作。\n</string>
+    <string name="lime_setting_title">LIME 2.0v \n\n**由 1.7.x 升级或者您欲使用新版本上的[3排键盘重对应]请重新汇入字根档。\n\n自定义输入法建立工具。透过 LIME 输入法字根对应档的汇入，您可以打造完全属于您个人的输入方式。关于对应档的建立方式您可以在官方网站找到更多相关的资讯.\nhttp://android.toload.net/</string>
+    <string name="lime_setting_operation_notice1">\n[载入对应表]\n您必需先汇入完整字根对应表才能开始输入文字，请选择适当的 .LIME 或 .CIN 进行资料载入动作。\n\n由 LIME 2.0 版本开始预先提供多种输入法的字根档，字根档会自动拷贝至 sdcard/lime/ 目录下，您也可以依据个人的喜好利用适当的工具进行内容的调整.\n</string>
     <string name="lime_setting_operation_info1">预设对应表版本 : </string>
-    <string name="lime_setting_operation_info1_cj">仓颉对应表版本 : </string>
-    <string name="lime_setting_operation_info1_dayi">大易对应表版本 : </string>
-    <string name="lime_setting_operation_info1_bpmf">注音对应表版本 : </string>
-    <string name="lime_setting_operation_info1_ez">轻松对应表版本 : </string>
-    <string name="lime_setting_operation_info1_related">预载关联字库版本 : </string>
+    <string name="lime_setting_operation_info1_cj">仓颉对应表版本(cj.cin) : </string>
+    <string name="lime_setting_operation_info1_dayi">大易对应表版本 (dayi3.cin): </string>
+    <string name="lime_setting_operation_info1_bpmf">注音对应表版本 (bpmf.cin): </string>
+    <string name="lime_setting_operation_info1_ez">轻松对应表版本 (ez.lime): </string>
+    <string name="lime_setting_operation_info1_related">预载关联字库版本 (assoc.lime): </string>
     <string name="lime_setting_operation_info2">总笔数 : </string> 
     <string name="lime_setting_operation_notice2">\n[清除资料库]\n假如您想要重置资料库请点选下方的按钮。资料库重置后可以让您重头开始汇入 LIME 字根档。</string>
     <string name="lime_setting_operation_notice3">\n[使用者关联字备份/还原]\nLIME 程式会依使用者曾输入过的文字自动建立关联字资料库。您可以使用下列的功能进行关联字资料库的备份及还原工作。\n</string>
