1. Bug fix on restoreRelatedUserdic in LIMDB. (delete extra "!" found by Julian). 2. Restore the alt-delete function on physical keyboard. 3. Rewrote the preference keyboardlist as a multi-choice selection dialog for users to select active keyboard list.  The showkeyboardpicker will only show active keyboards, and alt-@ will switch to next active keyboard.

--- a/branches/jeremy/res/values/strings.xml
+++ b/branches/jeremy/res/values/strings.xml
@@ -145,6 +145,14 @@
 		<item>Phonetic</item>
 		<item>Eazy</item>
 	</string-array>
+	<string-array name="keyboard_defaultstate">
+		<item>true</item>
+		<item>true</item>
+		<item>true</item>
+		<item>true</item>
+		<item>true</item>
+		<item>true</item>
+	</string-array>
     <string-array name="keyboard_codes">
 		<item>lime</item>
 		<item>phone</item>
