--- a/branches/jeremy/res/values/strings.xml
+++ b/branches/jeremy/res/values/strings.xml
@@ -18,7 +18,7 @@
     <string name="label_send_key">Send</string>
     
     <!-- LIME Setting -->
-    <string name="lime_setting_title">LIME 2.0.1v \n\n**Upgrade from 1.7.x or you would like to use [3 Rows Keybaord Remapping] feature please import IM mapping file again. \n\nThis is a tools which can help you build custom input method by import a set of IM mapping into database. Regarding how to use LIME and where to get mapping file please visit official website.\nhttp://android.toload.net/</string>
+    <string name="lime_setting_title">LIME 2.0.2v \n\n**Upgrade from 1.7.x or you would like to use [3 Rows Keybaord Remapping] feature please import IM mapping file again. \n\nThis is a tools which can help you build custom input method by import a set of IM mapping into database. Regarding how to use LIME and where to get mapping file please visit official website.\nhttp://android.toload.net/</string>
     <string name="lime_setting_operation_notice1">\n[Import Mapping Table]\nBefore you start using LIME IME, you would need to load valid .lime or .cin into the database.\n\nStart from version 2.0 LIME preloaded mapping files, related files will be transfer to your sdcard/lime/ folder after program installed.\n</string>
     <string name="lime_setting_operation_info1">Default Table Version : </string>
     <string name="lime_setting_operation_info1_cj">Changjei Table Version (cj.cin): </string>
@@ -89,6 +89,8 @@
     <string name="dayi_reverse_lookup_list">R-Lookup in Dayi</string>
     <string name="bpmf_reverse_lookup_list">R-Lookup in Phonetic</string>
     <string name="ez_reverse_lookup_list">R-Lookup in Eazy</string>
+    <string name="han_convert_option_list">Chinese Character Conversion</string>
+    
     
     <string name="table_list">Table Selection</string>
     <string name="similiar_list">Suggestion display amount</string>
@@ -119,6 +121,14 @@
     
     <!-- Other Messages -->
   	
+  	
+	<!-- Han Converter Options -->
+    <string-array name="han_convert_options">
+		<item>none</item>
+		<item>Traditional to Simplified</item>
+		<item>Simplified to Traditional</item>
+	</string-array>
+	
     <!-- IM Reverse Lookup List -->  
     <string-array name="im_reverse_lookup">
 		<item>None</item>
